--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
       Eclipse plugin for Apache Pig
     </div>
     
-    <p>After having given a try to the nice <a href="https://cwiki.apache.org/confluence/display/PIG/PigTools" target="_blank">Pig Eclipse plugins</a> 
+    <p>After having given a try to the nice <a href="https://cwiki.apache.org/confluence/display/PIG/PigTools" alt="Eclipse plugins" target="_blank">Eclipse plugins</a> 
+    for <a href="http://pig.apache.org/" alt="Pig Latin" target="_blank">Pig</a>
     I was wondering if it was possible to do something more similar to what Eclipse can do with Java:</p>
 
     <ul>
