--- a/index.html
+++ b/index.html
@@ -66,7 +66,14 @@
     <h2>Eclipse Update Website</h2>
     <p>
       Works with Eclipse 3.6+
-      <a href="http://romainr.github.com/PigEditor/updates/">http://romainr.github.com/PigEditor/updates/</a>
+      <a href="http://romainr.github.com/PigEditor/updates/">http://romainr.github.com/PigEditor/updates/</a>      
+    </p>
+    <p>
+      Recent updates
+    <ul>
+      <li>support <a href="http://pig.apache.org/docs/r0.8.0/piglatin_ref2.html#Parameter+Substitution" target="_blank">%DECLARE</a></li>
+      <li>case insensitiveness</li>
+   </ul>      
     </p>
     
     <div class="footer">      
