--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
    <p>
     There is still a lot to improve and there are some false positive errors highlighted
-    (trying to be in sync with Pig 0.9 for now), but feel free to send me your
+    (trying to be in sync with Pig 0.9 without Macros for now), but feel free to send me your
        <a href="http://github.com/romainr/PigEditor">feedback/scripts/pull requests</a>.
     </p>
     
