updating Eclipse update website to 1.0.0.7

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <ul>
       <li>automatic error highlighting</li>
       <li>check alias name existence</li>
-      <li>auto complete</li>
+      <li>auto complete keywords, UDF names (built-in, piggybank)</li>
       <li>outline</li>
    </ul>
 
