updating recent changes

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
     <p>
       Recent updates
     <ul>
-      <li>support <a href="http://pig.apache.org/docs/r0.8.0/piglatin_ref2.html#Parameter+Substitution" target="_blank">%DECLARE</a></li>
-      <li>case insensitiveness</li>
+      <li>autocomplete the UDF names from Pig built-in and PiggyBank</a></li>
+      <li>e.g. press CTRL + TAB after a GENERATE and the ABS, COUNT, AVG ... functions will appear</li>
    </ul>      
     </p>
     
