adding date to the update list

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <a href="http://romainr.github.com/PigEditor/updates/">http://romainr.github.com/PigEditor/updates/</a>      
     </p>
     <p>
-      Recent updates
+      Updates December 2011
     <ul>
       <li>autocomplete the UDF names from Pig built-in and PiggyBank</a></li>
       <li>e.g. press CTRL + TAB after a GENERATE and the ABS, COUNT, AVG ... functions will appear</li>
