--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       Eclipse plugin for Apache Pig
     </div>
     
-    <p>After having given a try to the nice <a href="https://cwiki.apache.org/confluence/display/PIG/PigTools" alt="Eclipse plugins" target="_blank">Eclipse plugins</a> 
-    for <a href="http://pig.apache.org/" alt="Pig Latin" target="_blank">Pig</a>
-    I was wondering if it was possible to do something more similar to what Eclipse can do with Java:</p>
+    <p>
+    Editor for <a href="http://pig.apache.org/" alt="Pig Latin" target="_blank">Pig</a> simliar to what Eclipse can do with Java:
+    </p>
 
     <ul>
       <li>automatic error highlighting</li>
@@ -54,6 +54,10 @@
       <li>auto complete keywords, UDF names (built-in, piggybank)</li>
       <li>outline</li>
    </ul>
+
+   <p>
+   It is possible to edit Pig scripts remotely with the Remote System Explorer perspective of this plugin http://www.eclipse.org/tm/ (thanks <a href="http://twitter.com/#!/amgadmadkour">@amgadmadkour</a>!)
+   </p>
 
    <p>
     There is still a lot to improve and there are some false positive errors highlighted
