--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
    </ul>
 
    <p>
-   It is possible to edit Pig scripts remotely with the Remote System Explorer perspective of this plugin http://www.eclipse.org/tm/ (thanks <a href="http://twitter.com/#!/amgadmadkour">@amgadmadkour</a>!)
+   It is possible to edit Pig scripts remotely with the <a href="http://www.eclipse.org/tm/">Remote System Explorer perspective</a> (tip from <a href="http://twitter.com/#!/amgadmadkour">@amgadmadkour</a>!)
    </p>
 
    <p>
