--- a/index.html
+++ b/index.html
@@ -45,22 +45,22 @@
     </div>
     
     <p>
-    Editor for <a href="http://pig.apache.org/" alt="Pig Latin" target="_blank">Pig</a> simliar to what Eclipse can do with Java:
+    Editor for <a href="http://pig.apache.org/" alt="Pig Latin" target="_blank">Pig</a> similiar to what Eclipse can do with Java:
     </p>
 
     <ul>
-      <li>automatic error highlighting</li>
+      <li>syntax/errors highlighting</li>
       <li>check alias name existence</li>
-      <li>auto complete keywords, UDF names (built-in, piggybank)</li>
-      <li>outline</li>
+      <li>auto complete keywords, UDF names</li>
+      <li>outline...</li>
    </ul>
 
    <p>
-   It is possible to edit Pig scripts remotely with the <a href="http://www.eclipse.org/tm/">Remote System Explorer perspective</a> (tip from <a href="http://twitter.com/#!/amgadmadkour">@amgadmadkour</a>!)
+   It is possible to edit Pig scripts remotely with the <a href="http://www.eclipse.org/tm/">Remote System Explorer perspective</a> (tip from <a href="http://twitter.com/#!/amgadmadkour">@amgadmadkour</a>!).
    </p>
 
    <p>
-    There is still a lot to improve and there are some false positive errors highlighted
+    There is still a lot to improve and false positive errors highlighted are possible
     (trying to be in sync with Pig 0.9 without Macros for now), but feel free to send me your
        <a href="http://github.com/romainr/PigEditor">feedback/scripts/pull requests</a>.
     </p>
