update on compatible eclipse versions

--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
        <a href="http://github.com/romainr/PigEditor">feedback/scripts/pull requests</a>.
     </p>
 
-    <h2>Eclipse Update Website</h2>
+    <h2>Install</h2>
     <p>
-      Works with Eclipse 3.6+
+      Eclipse Update Website: 
       <a href="http://romainr.github.com/PigEditor/updates/">http://romainr.github.com/PigEditor/updates/</a>      
     </p>
     <p>
-      Updates December 2011
-    <ul>
-      <li>autocomplete the UDF names from Pig built-in and PiggyBank</a></li>
-      <li>e.g. press CTRL + TAB after a GENERATE and the ABS, COUNT, AVG ... functions will appear</li>
-   </ul>      
+     Eclipse
+     <ul> 
+       <li>Eclipse 3.6 Helios with <a href="http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/">Xtext 2.2.1 (bottom line)</a></i>
+       <li>Eclipse 3.7 Indigo</li>
+     </ul>
     </p>
     
     <h2>Example</h2>
