updating eclipse links

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
       <a href="http://romainr.github.com/PigEditor/updates/">http://romainr.github.com/PigEditor/updates/</a>      
     </p>
     <p>
-     Eclipse
-     <ul> 
-       <li>Eclipse 3.6 Helios with <a href="http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/">Xtext 2.2.1 (bottom line)</a></i>
-       <li>Eclipse 3.7 Indigo</li>
-     </ul>
+      Eclipse
+      <ul> 
+        <li><a href="http://www.eclipse.org/downloads/packages/release/helios/sr2">3.6 Helios</a> with <a href="http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/">Xtext 2.2.1 (bottom line)</a></i>
+        <li><a href="http://www.eclipse.org/downloads/packages/release/indigo/r">3.7 Indigo</a></li>
+      </ul>
     </p>
     
     <h2>Example</h2>
