removing reference to romain

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <div id="container">
     <h1><a href="http://github.com/romainr/PigEditor">PigEditor</a>
-      <span class="small">by <a href="http://github.com/romainr">Romain</a></span></h1>
+      <!--<span class="small">by <a href="http://github.com/romainr">Romain</a></span></h1>-->
 
     <div class="description">
       Eclipse plugin for Apache Pig
