[site] Hosting the update website on another server

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
     <h2>Install</h2>
     <p>
       Eclipse Update Website: 
-      <a href="http://romainr.github.com/PigEditor/updates/">http://romainr.github.com/PigEditor/updates/</a>      
+      <a href="http://youbills.com/site_media/updates/">http://youbills.com/site_media/updates/</a>      
+    </p>
+
+    <p>
+    I am currently working on a Web PigEditor in https://github.com/cloudera/hue (target date: end of Q2 2013).
     </p>
     <p>
       Eclipse
