--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     <h2>Install</h2>
     <p>
       Eclipse Update Website: 
-      <a href="http://youbills.com/site_media/updates/">http://youbills.com/site_media/updates/</a>      
+      <a href="http://romainr.github.com/PigEditor/updates/ ">http://romainr.github.com/PigEditor/updates/ </a>
+      (shows 404 but works when adding it as a repository in Eclipse)
     </p>
 
     <p>
